Only start timer after loading a set

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
   .controls{
     margin-left:auto;
     display:flex;
-    flex-direction:column;   /* stack rows */
+    flex-direction:column;
     align-items:flex-end;    /* right align */
     gap:6px;
-    flex-wrap:nowrap;
   }
   .controls-top{
     display:flex;
@@ -144,7 +143,6 @@
         </div>
 
         <div id="qGrid" aria-label="Question grid"></div>
-        <!-- Removed Options block -->
       </aside>
 
       <!-- MAIN -->
@@ -542,8 +540,7 @@ let timerSeconds = 3600; // default 1hr
 timerInput.addEventListener('change', e=>{
   const val = Number(e.target.value);
   if(val > 0){
-    timerSeconds = val * 60;
-    resetTimer();
+    timerSeconds = val * 60; // don't start yet; just set initial seconds
   }
 });
 function resetTimer(){
@@ -559,8 +556,8 @@ function resetTimer(){
     }
   },1000);
 }
-// Start timer initially
-resetTimer();
+// IMPORTANT: Do NOT start the timer on load.
+// (No call to resetTimer() here.)
 
 /* === Manifest-driven set loader === */
 let MANIFEST = null;
@@ -607,6 +604,11 @@ async function fetchAndLoadSet(setId){
     const catLabel = categorySelect.selectedOptions[0]?.textContent || 'Exam';
     const setLabel = setSelect.selectedOptions[0]?.textContent || '';
     document.getElementById('examTitle').textContent = `Exam: ${catLabel} — ${setLabel}`;
+
+    // Start the timer ONLY after a set is loaded
+    timerSeconds = Math.max(1, Number(timerInput.value) || 60) * 60;
+    resetTimer();
+
   }catch(err){
     console.error(err);
     alert('Could not load the selected set.');
@@ -631,6 +633,8 @@ loadSetBtn.addEventListener('click', ()=>{
   prevBtn.disabled = true;
   nextBtn.disabled = true;
   updateAnsweredCount();
+
+  // Timer shows placeholder until a set is loaded (no resetTimer call here)
 
   try{
     MANIFEST = await fetchManifest();
