Update page title and tab title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Animal Science — Licensure Mock Exam</title>
+<title>LEA — Mock Exam</title>
 
 <!-- 🌱 Emoji favicon (no external file needed) -->
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌱</text></svg>">
@@ -124,8 +124,8 @@
       <div class="brand">
         <div class="logo">🌱</div>
         <div>
-          <h1>Animal Science — Mock Licensure Exam</h1>
-          <div class="small">Prepared for licensure review — pick a set to begin</div>
+          <h1>Review Questions — Mock Exam</h1>
+          <div class="small">LEZGO! One step a time.</div>
         </div>
       </div>
 
