--- a/index.html
+++ b/index.html
@@ -39,23 +39,27 @@
     gap:8px;
   }
 
-  /* Badges */
+  /* Badges — refreshed to match theme */
   .badge{
-    font-size:15px;
-    font-weight:800;
-    padding:8px 12px;
-    border-radius:999px;
-    line-height:1;
+    display:inline-flex; align-items:center; gap:8px;
+    font-size:15px; font-weight:700;
+    padding:8px 12px; border-radius:999px; line-height:1;
+    background:linear-gradient(180deg,#ffffffcc,#f7fff7cc);
+    border:1px solid rgba(6,54,26,0.10);
     box-shadow:var(--shadow);
-    white-space:nowrap;
+    color:#06361a;
+    backdrop-filter:saturate(1.1) blur(2px);
+    -webkit-backdrop-filter:saturate(1.1) blur(2px);
   }
   .badge--progress{
-    color:#fff;
-    background:linear-gradient(90deg,#0ea5e9,#2563eb);
+    background:linear-gradient(180deg,#e9f7ee,#e2f3e8);
+    border-color:rgba(46,125,50,0.22);
+    color:#235b2a;
   }
   .badge--score{
-    color:#06361a;
-    background:linear-gradient(90deg,#ffd86b,#ffb300);
+    background:linear-gradient(180deg,#fff6da,#ffefb3);
+    border-color:rgba(255,179,0,0.32);
+    color:#6a4b00;
   }
 
   .small{font-size:13px;color:var(--muted)}
@@ -476,7 +480,6 @@ function submitExam(force = false, showResult = true){
     scoreText.textContent = `${correct} / ${TOTAL}`;
     percentText.textContent = TOTAL ? ((correct/TOTAL)*100).toFixed(2) + '%' : '0%';
     resultModal.style.display = 'flex';
-    // small tick to allow display to attach before anim
     setTimeout(()=> resultModal.classList.add('show'), 10);
   }
 }
@@ -672,7 +675,6 @@ function resetTimer(){
 
       // Give the modal a moment to animate in, then submit.
       setTimeout(()=>{
-        // submit with force, but don't spawn result immediately under the time-up modal
         submitExam(true, /*showResult=*/true);
       }, 600);
     }
