Change Tip to Note

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </div>
         </div>
 
-        <footer class="small">Tip: Choices and question order are randomized automatically.</footer>
+        <footer class="small">Note: Choices and question order are randomized automatically.</footer>
       </main>
     </div>
   </div>
