--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="logo">🌱</div>
         <div>
           <h1>Review Questions — Mock Exam</h1>
-          <div class="small">LEZGO! One step a time.</div>
+          <div class="small">LEZGO! One step at a time.</div>
         </div>
       </div>
 
