--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
   button.ghost:hover { background:rgba(6,54,26,0.05); border-color:rgba(6,54,26,0.2); transform:translateY(-2px); box-shadow:0 2px 6px rgba(0,0,0,0.08); }
   button.ghost:active { transform:scale(0.97); box-shadow:0 2px 4px rgba(0,0,0,0.15) inset; }
 
+  /* Danger variant for confirm modal primary */
+  button.btn.danger { background: var(--danger); }
+  button.btn.danger:hover { background:#cc3535; }
+
   .qnum { transition: transform 0.15s ease, box-shadow 0.2s ease, border-color 0.2s ease; }
   .qnum:hover { transform:translateY(-2px); box-shadow:0 4px 10px rgba(0,0,0,0.08); border-color:rgba(10,60,20,0.12); }
   .qnum:active { transform:scale(0.97); box-shadow:inset 0 2px 4px rgba(0,0,0,0.12); }
@@ -255,6 +259,18 @@
     </div>
   </div>
 
+  <!-- Confirm Submit Modal (early submit, minimal) -->
+  <div id="confirmSubmitModal" class="modal hidden" style="display:none">
+    <div class="box" role="dialog" aria-labelledby="confirmSubmitTitle" aria-describedby="confirmSubmitDesc" aria-modal="true">
+      <h3 id="confirmSubmitTitle" style="margin:6px 0 2px 0">Submit exam now?</h3>
+      <p id="confirmSubmitDesc" class="small" style="margin:0 0 6px 0">You can’t change answers after submitting.</p>
+      <div style="margin-top:12px;display:flex;gap:8px;justify-content:center">
+        <button id="confirmCancel" class="ghost">Continue exam</button>
+        <button id="confirmSubmitNow" class="btn danger" autofocus>Submit now</button>
+      </div>
+    </div>
+  </div>
+
 <script>
 /* === App state === */
 let QUESTIONS = [];            // array of {question, choices[], answer}
@@ -263,6 +279,8 @@ let CURRENT = 0;
 let TOTAL = 0;
 let TIMER = null;
 let reviewMode = false;
+let isModalOpen = false;       // disables exam keyboard shortcuts while true
+let activeModal = null;        // 'confirm' | 'timeup' | null
 
 /* --- DOM refs --- */
 const qGrid = document.getElementById('qGrid');
@@ -289,6 +307,11 @@ const timerInput = document.getElementById('timerInput');
 /* Time-up modal refs */
 const timeUpModal = document.getElementById('timeUpModal');
 const timeUpOk = document.getElementById('timeUpOk');
+
+/* Confirm submit modal refs */
+const confirmSubmitModal = document.getElementById('confirmSubmitModal');
+const confirmCancel = document.getElementById('confirmCancel');
+const confirmSubmitNow = document.getElementById('confirmSubmitNow');
 
 /* Picker refs */
 const categorySelect = document.getElementById('categorySelect');
@@ -448,12 +471,12 @@ function loadQuestionsFromArray(arr, shouldRandomize=false){
   nextBtn.disabled = false;
 }
 
-/* --- Submit exam (supports forced submit) ---
-   NOTE: called after user confirms on the time-up modal for auto-submit */
+/* --- Submit exam (supports forced submit) --- */
 function submitExam(force = false, showResult = true){
   if(reviewMode) return;
 
   if(!force){
+    // Fallback (not used by default UI anymore).
     const unanswered = USER.filter(x=>x===null).length;
     if(unanswered>0){
       if(!confirm(`You have ${unanswered} unanswered questions. Submit anyway?`)) return;
@@ -558,7 +581,7 @@ qGrid.addEventListener('click', (e)=>{
 
 /* --- Keyboard navigation --- */
 document.addEventListener('keydown', (e)=>{
-  if(reviewMode) return;
+  if(reviewMode || isModalOpen) return;
   if(e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA') return;
 
   if(e.key === 'ArrowLeft' || e.key==='ArrowUp'){
@@ -597,15 +620,6 @@ clearAnswersBtn.addEventListener('click', ()=>{
   renderQuestion(0);
   buildGrid();
   updateAnsweredCount();
-});
-
-/* --- Submit button --- */
-submitBtn.addEventListener('click', submitExam);
-
-/* --- Result modal --- */
-closeResultBtn.addEventListener('click', ()=>{
-  resultModal.classList.remove('show');
-  setTimeout(()=> resultModal.style.display = 'none', 250);
 });
 
 /* --- Save/Load progress from localStorage --- */
@@ -659,25 +673,74 @@ timerInput.addEventListener('change', e=>{
 
 /* --- Time-up modal flow (blurred, no review mode until Okay) --- */
 function openTimeUpModal(){
+  // If confirm modal is open, close it to avoid stacking modals
+  if (activeModal === 'confirm') closeConfirmSubmitModal(false);
+
   timeUpModal.style.display = 'flex';
   setTimeout(()=> timeUpModal.classList.add('show'), 10);
-  // prevent page scroll under modal
   document.body.style.overflow = 'hidden';
+  isModalOpen = true;
+  activeModal = 'timeup';
 }
 function closeTimeUpModal(){
   timeUpModal.classList.remove('show');
   setTimeout(()=> {
     timeUpModal.style.display = 'none';
-    document.body.style.overflow = ''; // restore scroll
+    document.body.style.overflow = '';
   }, 250);
+  isModalOpen = false;
+  activeModal = null;
 }
 timeUpOk.addEventListener('click', ()=>{
-  // close the modal, then submit (enter review mode now)
   closeTimeUpModal();
-  // small delay so the fade-out feels natural
   setTimeout(()=> submitExam(true, /*showResult=*/true), 150);
 });
 
+/* --- Confirm Submit (early submit) modal --- */
+function openConfirmSubmitModal(){
+  if (reviewMode || TOTAL===0) return;
+
+  confirmSubmitModal.style.display = 'flex';
+  setTimeout(()=> confirmSubmitModal.classList.add('show'), 10);
+  document.body.style.overflow = 'hidden';
+  isModalOpen = true;
+  activeModal = 'confirm';
+
+  // Focus management
+  setTimeout(()=> confirmSubmitNow.focus(), 20);
+}
+
+function closeConfirmSubmitModal(restoreFocus = true){
+  confirmSubmitModal.classList.remove('show');
+  setTimeout(()=> {
+    confirmSubmitModal.style.display = 'none';
+    document.body.style.overflow = '';
+  }, 250);
+  isModalOpen = false;
+  activeModal = null;
+  if (restoreFocus) submitBtn.focus();
+}
+
+confirmCancel.addEventListener('click', ()=> closeConfirmSubmitModal(true));
+confirmSubmitNow.addEventListener('click', ()=>{
+  closeConfirmSubmitModal(false);
+  setTimeout(()=> submitExam(true, /*showResult=*/true), 100);
+});
+
+// Keyboard handlers while confirm modal is open
+document.addEventListener('keydown', (e)=>{
+  if (activeModal === 'confirm'){
+    if (e.key === 'Escape'){
+      e.preventDefault();
+      closeConfirmSubmitModal(true);
+    } else if (e.key === 'Enter'){
+      e.preventDefault();
+      confirmSubmitNow.click();
+    }
+  }
+});
+
+/* --- Timer runner --- */
 function resetTimer(){
   if(TIMER) clearInterval(TIMER);
   timerEl.textContent = formatTime(timerSeconds);
@@ -686,7 +749,6 @@ function resetTimer(){
     timerEl.textContent = formatTime(timerSeconds);
     if(timerSeconds<=0){
       clearInterval(TIMER);
-      // Show custom modal with strong blur/dim; DO NOT auto-submit yet.
       openTimeUpModal();
     }
   },1000);
@@ -763,6 +825,15 @@ setSelect.addEventListener('change', e=>{
 });
 loadSetBtn.addEventListener('click', ()=>{
   if(setSelect.value) fetchAndLoadSet(setSelect.value);
+});
+
+/* Submit button now opens confirm modal (early submit) */
+submitBtn.addEventListener('click', openConfirmSubmitModal);
+
+/* Result modal close */
+closeResultBtn.addEventListener('click', ()=>{
+  resultModal.classList.remove('show');
+  setTimeout(()=> resultModal.style.display = 'none', 250);
 });
 
 /* Boot */
